# pld-comp

./: .gitignore  CMakeLists.txt  README.md  install-antlr.sh
compiler/: CodeGenVisitor.cpp  CodeGenVisitor.h  FirstPassVisitor.cpp  FirstPassVisitor.h  Makefile  Name.cpp  Name.h  fedora.mk  ifcc  ifcc.g4  main.cpp
compiler/inputs/: AdditionSimple.c  IfSimple.c  InverseSimple.c  SubstractSimple.c  SupperieurStrictSimple.c  WhileSimple.c  affect.c  alphabet.c  fonction.c  main.s  parentheseSimple.c  ret42aff.c  ret42aff.s
tests/testfiles/: 5_add_sub_parentheses.c  6_add_sub_simple.c  EgalDiffSimple.c  IfImbrique.c  IfSimple.c  InferieurStrictSimple.c  InverseSimpleBis.c  InverseSimpleEntier.c  OperatorAndOr.c  OperatorBitOr.c  OperatorXorBit.c  SubstractSimple.c  SupperieurStrictSimple.c  WhileSimple.c  test.c
tests/testfiles/Integration/: alphabet.c  ifElseImbrique.c  ifElseImbrique2.c  ifElseImbrique3.c
tests/testfiles/invalid/arithmetics/: arith_identifier.c  assign_to_num.c  div_zero.c  func_multiply.c  invalid_operation.c  keyword_id.c  string_mult.c  undeclared_var_mutli.c
tests/testfiles/invalid/basic/: invalid_variable_assignment.c  invalid_variable_assignment2.c  multiple_return.c  variable_redeclaration.c
tests/testfiles/invalid/bitwise/: invalid_bitwise.c
tests/testfiles/invalid/conditional/: assign_instead_compare.c  assign_instead_compare_while.C  syntax_error_if.c  undeclared_var.c  undeclared_var_while.c
tests/testfiles/valid/arithmetics/: addition_division.c  addition_subtraction_priority.c  difficult_test.c  difficult_test_p.c  multiple_div.c  multiple_express.c  multiplication.c  subtraction_and_multiplication.c
tests/testfiles/valid/basic/: comment.c  comment2.c  return42.c  return_constant.c  variable_assignment.c
(+12 files in other folders)
